# antaris-router

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml  test_examples.py  update_repo_metadata.sh
.github/workflows/: tests.yml
antaris_router/: __init__.py  adaptive.py  classifier.py  confidence.py  config.py  costs.py  defaults.json  mcp_server.py  quality.py  registry.py  router.py  semantic.py  sla.py  utils.py
docs/: README.md
examples/: quickstart.py
tests/: test_basic.py  test_confidence.py  test_confidence_routing.py  test_mcp.py  test_sla.py  test_v2.py
