[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antaris-router"
version = "4.0.0"
description = "File-based model router for LLM cost optimization. Zero dependencies."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Antaris Analytics", email = "dev@antarisanalytics.com"}
]
keywords = ["ai", "llm", "router", "cost", "optimization", "models", "deterministic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Antaris-Analytics/antaris-router"
Documentation = "https://router.antarisanalytics.ai"
Repository = "https://github.com/Antaris-Analytics/antaris-router"
Issues = "https://github.com/Antaris-Analytics/antaris-router/issues"

[tool.setuptools.packages.find]
include = ["antaris_router*"]

[tool.setuptools.package-data]
antaris_router = ["*.json"]